see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-Mar-2011 Mark Dexter
 # [#25288] Media form field is not allowed access to media manager in the front end
 # [#25129] Media manager popup - Change of directory don't reflect in list of images and folders on windows system (XAMPP)
 # [#24736] Don't always load Mootools (More) in the backend.
 # [#25139] Changing modules doesn't reflect changes with enabled caching.
 # [#25071] onchange event does not fire in JFormFieldAMedia

29-Mar-2011 Jean-Marie Simonet
 # Correcting some components xml
 # Normalizing front-end modules xml (format and sys.ini missing)
 # Normalizing back-end modules xml (languages missing)
 
28-Mar-2011 Jean-Marie Simonet
 # [#25481] *Combined patch for various meta issues in menu items. Thanks Piotr
 
27-Mar-2011 Jean-Marie Simonet
 #$ Adding Azeri to installation languages
 # [#25224] Many places calling JHTML:: instead of JHtml:: Thanks Peter and Bill.
 # [#25451] Installer missing client-side check that package was selected prior to pressing Upload and Install Button. Thanks Amy.
 # [#25467] Empty file administrator/components/com_users/helpers/levels.php  
 
24-Mar-2011 Jean-Marie Simonet
 # [#25436] *Metatag Robots not working for menu items
 
23-Mar-2011 Jean-Marie Simonet
 # Adding Khmer flag to language switcher images. Thanks Sovann Heng.
 # [#25417] JPane slider effect not functioning properly. Thanks Byron and Bill.
 # [#22425] Improve .htaccess rewrite efficency. Thanks Ian Galpin.
 #$ Adding Croatian to installation languages
 # [#25432] Hathor: minor bug that causes hidden Date values in com_templates. Thanks CY Lee and Bill.