@@ -124,6 +124,7 @@ Arabic Unitag (ar-AA) - Arabic Unitag Translation Team - Mahmood Alhaj Kassem
 Azeri (az-AZ) - Azeri Translation team - Guluzade Farhad
 Belarusian (be-BY) - Dennis Hermacki
 Bengali (bn-BD) – Kamal Sikder
+Bosnian (bs-BA) - Bosnian Translation Team - Admir Agic
 Brazilian Portuguese (pt-BR) - Joomla! Brasil - FaBMak
 Bulgarian (bg-BG) - Bulgarian Translation Team - Yuriy Boev
 Catalan (ca-ES) - Catalan Translation Team - Damià Verger
