@@ -1,0 +1,213 @@
+; $Id: bs-BA.ini Joomla! 1.6
+; Joomla! Project
+; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+;Stepbar
+INSTL_STEPS_TITLE="Koraci"
+INSTL_STEP_1_LABEL="1 : Jezik"
+INSTL_STEP_2_LABEL="2 : Preinstalaciona provjera"
+INSTL_STEP_3_LABEL="3 : Dozvola"
+INSTL_STEP_4_LABEL="4 : Baza podataka"
+INSTL_STEP_5_LABEL="5 : FTP konfiguracija"
+INSTL_STEP_6_LABEL="6 : Konfiguracija"
+INSTL_STEP_7_LABEL="7 : Kraj"
+
+;Language view
+INSTL_SELECT_LANGUAGE_TITLE="Odabir jezika"
+INSTL_SELECT_LANGUAGE_DESC="Izaberite jezik koji ćete koristiti u toku instalacije Joomle."
+INSTL_LANGUAGE_TITLE="Izaberite jezik"
+INSTL_WARNJAVASCRIPT="Upozorenje! JavaScript mora biti omogućen za ispravnu instalaciju Joomle"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE="Preinstalaciona provjera"
+INSTL_PRECHECK_FOR_VERSION="Preinstalaciona provjera %s:"
+INSTL_PRECHECK_DESC="Ako bilo koja od ovih stavki nije podržana (označena kao <strong class="_QQ_"red"_QQ_">NE</strong>) molim vas da ih omogućite. Ukoliko to ne uradite vaša Joomla! instalacija možda neće ispravno funkcionisati."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Preporučena podešavanja:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Preporučena podešavanja PHP-a za potpunu kompatibilnost sa Joomlom.<br />Ipak, Joomla! će biti operabilna i ako podešavanja nisu identična sa preporučenim."
+INSTL_PRECHECK_DIRECTIVE="Direktiva"
+INSTL_PRECHECK_RECOMMENDED="Preporuka"
+INSTL_PRECHECK_ACTUAL="Trenutno"
+
+; Database view
+INSTL_DATABASE="Podešavanje beze podataka"
+INSTL_DATABASE_HOST_DESC="Uobičajeno je &quot;localhost&quot;"
+INSTL_DATABASE_HOST_LABEL="Ime servera"
+INSTL_DATABASE_NAME_DESC="Neki hostovi dozvoljavaju samo određena DB imena. Koristite prefiks tabele za različite Joomla! portale."
+INSTL_DATABASE_NAME_LABEL="Ime baze podataka"
+INSTL_DATABASE_OLD_PROCESS_DESC="Postojeće kopije tabela prethodnih Joomla! instalacija će biti zamjenjene"
+INSTL_DATABASE_OLD_PROCESS_LABEL="Stara baza"
+INSTL_DATABASE_PASSWORD_DESC="Zbog sigurnosnih razloga obavezno koristite šifru za mysql nalog"
+INSTL_DATABASE_PASSWORD_LABEL="Šifra"
+INSTL_DATABASE_PREFIX_DESC="Odaberite prefiks baze. Idealno je,tri ili četiri alfanumerička znaka i mora da se završi donjom crtom. Ne koristite &quot;bak_&quot; jer se taj prefiks koristi za rezervne kopije tabela."
+INSTL_DATABASE_PREFIX_LABEL="Prefiks tabele"
+INSTL_DATABASE_TYPE_DESC="Ovo je verovatno &quot;MySQLi&quot;"
+INSTL_DATABASE_TYPE_LABEL="Tip baze podataka"
+INSTL_DATABASE_USER_DESC="Nešto kao "_QQ_"root"_QQ_" ili korisničko ime dobijeno od hosta"
+INSTL_DATABASE_USER_LABEL="Korisničko ime"
+INSTL_DATABASE_TITLE="Podešavanje povezivanja"
+INSTL_DATABASE_DESC="<p>Instalacija Joomle na vaš server zahtjeva 4 jednostavna koraka ...</p><p>Molim unesite 'hostname' servera na koju će Joomla! biti instalirana.</p><p>Unesite MySQL korisničko ime, šifru i ime baze koje će koristiti vaš Joomla portal.</p><p>Unesite prefiks za tabele u ovoj Joomla! instalaciji. Odaberite šta će se uraditi sa tabelama iz prethodne instalacije (ako postoji).</p>"
+
+;Filesystem view
+INSTL_AUTOFIND_FTP_PATH="Automatska pretraga FTP putanje"
+INSTL_FTP="FTP konfiguracija"
+INSTL_FTP_DESC="<p>Na nekim serverima možda ćete morati da obezbjedite FTP pristupne podatke (korisničko ime i šifru) za završetak instalacije.</p><p>Iz sigurnosnih razloga, najbolje je da imate poseban FTP korisnički nalog sa pristupom direktoriju u koji se instalira Joomla! a ne cijelom serveru.</p><p><b>Napomena:</b> Ako instalirate na Windows operativnom sistemu, FTP layer <strong>nije</strong> potreban.</p>"
+INSTL_FTP_ENABLE_LABEL="Omogući FTP"
+INSTL_FTP_HOST_LABEL="FTP Host"
+INSTL_FTP_PASSWORD_LABEL="FTP šifra"
+INSTL_FTP_PORT_LABEL="FTP port"
+INSTL_FTP_ROOT_LABEL="FTP osnovni direktorijum"
+INSTL_FTP_SAVE_LABEL="Sačuvaj FTP šifru"
+INSTL_FTP_TITLE="FTP konfiguracija (<strong class="_QQ_"red"_QQ_">Opcionalno - većina korisnika može da preskoči ovaj korak - Kliknite na dalje da preskočite ovaj korak</strong>)"
+INSTL_FTP_USER_LABEL="FTP korisničko ime"
+INSTL_SITE_NAME_LABEL="Ime portala"
+INSTL_VERIFY_FTP_SETTINGS="Provjeri FTP podešavanje"
+INSTL_FTP_SETTINGS_CORRECT="Podešavanje ispravno"
+INSTL_FTP_USER_DESC="Upozorenje! Savjetujemo da ovo ostavite prazno i da unesete vaše FTP korisničko ime prilikom svakog kopiranja datoteka."
+INSTL_FTP_PASSWORD_DESC="Upozorenje! Savjetujemo da ovo ostavite prazno i da unesete vašu FTP šifru prilikom svakog kopiranja datoteka."
+
+;Site View
+INSTL_SITE="Osnovno podešavanje"
+INSTL_ADMIN_EMAIL_LABEL="Vaš email"
+INSTL_ADMIN_PASSWORD_LABEL="Administratorska šifra"
+INSTL_ADMIN_PASSWORD2_LABEL="Potvrda administratorske šifre"
+INSTL_ADMIN_USER_LABEL="Admin korisničko ime"
+INSTL_SITE_NAME_TITLE="Ime portala"
+INSTL_SITE_META_ADVANCED_SETTINGS="Napredna podešavanja - opcionalno"
+INSTL_SITE_NAME_DESC="Unesite ime vašeg Joomla! portala.<br />Opcionalno: Možete upisati meta opis i meta ključne reči za vaš portal."
+INSTL_SITE_METADESC_LABEL="Meta opis"
+INSTL_SITE_METADESC_TITLE_LABEL="Unesite opis portala koji će koristiti web pretraživači. Generalno, najviše 20 riječi je optimalno."
+INSTL_SITE_METAKEYS_LABEL="Meta ključne reči"
+INSTL_SITE_METAKEYS_TITLE_LABEL="Unesite ključne reči i fraze koje najbolje opisuju vaš portala. Odvojite ključne riječi zarezom,a fraze jednostrukim navodnicima."
+INSTL_SITE_CONF_TITLE="Podtvrdi administratorski email i šifru."
+INSTL_SITE_CONF_DESC="Unesite vaš email. To je ujedno i adresa super administratora portala.<br />Unesite šifru i zatim je potvrdite u odgovarajućem polju. Možete promjeniti podrazumjevano korisničko ime <strong>admin</strong>. Ovo korisničko ime i šifru ćete koristiti za pristup administratorskoj kontrolnoj ploči, po završenoj instalaciji.<br /> Ukoliko migrirate, možete ignorisati ovu sekciju. Vaša tekuća podešavanja će biti automatski migrirana."
+INSTL_SITE_LOAD_SAMPLE_TITLE="Instaliraj primjer podatke"
+INSTL_SITE_LOAD_SAMPLE_DESC1="<strong>Važno!</strong>: Preporučljivo je da početnici i novi Joomla! korisnici instaliraju primjere unosa. Kliknite na dugme <i>pre</i> za prelazak na sljedeću fazu."
+INSTL_SITE_LOAD_SAMPLE_DESC2="<strong>1. Primjeri:</strong> Prije nego što završite instalaciju, možete popuniti bazu podacima. Postoji dva načina da to uradite:"
+INSTL_SITE_LOAD_SAMPLE_DESC3="<strong>1a. Podrazumjevani primjeri</strong>. Da biste ovo uradili provjerite da li postoji 'Default English (GB) Sample Data' u padajućoj listi i kliknite na dugme za instalaciju primjera."
+INSTL_SITE_LOAD_SAMPLE_DESC4="<strong>1b. Prilagođeni primjeri</strong>. Da biste ovo uradili odaberite raspoložive primjere i kliknite na dugme za instalaciju primjera."
+INSTL_SITE_LOAD_SAMPLE_DESC8="<strong>2. Čista (prazna) instalacija</strong>: Ukoliko ne želite primjere, unesite naziv portala, administratorski email i odaberite šifru. Nakon toga pređite na završni korak klikom na <em>Dalje</em>."
+INSTL_SITE_SAMPLE_LABEL="Set primjera"
+INSTL_SITE_INSTALL_SAMPLE_LABEL="Instalacija primjera"
+INSTL_SITE_INSTALL_SAMPLE_DESC="Instalacija se preporučuje za početnike. Ovo će instalirati podrazumjevane primjere sadržaja koji se nalaze u instalacionom paketu Joomle."
+INSTL_SITE_SAMPLE_LOADED="Primjer podataka uspješno instaliran!"
+INSTL_SAMPLE_DATA_SET="Default English (GB) Sample Data"
+
+;Complete view
+INSTL_COMPLETE="Kraj"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Detalji administratorske prijave"
+INSTL_COMPLETE_DESC1="Kliknite na dugme portala da vidite vaš Joomla! portala ili dugme Admin da biste se prijavili kao administrator."
+INSTL_COMPLETE_DESC2="Na Joomla! portalu za pomoć, pronaći ćete korak-po-korak vodič za instalaciju vašeg jezičkog paketa za Joomlu i listu linkova sa raspoloživim jezičkim paketima."
+INSTL_COMPLETE_DESC3="Kliknite dugme na desnoj strani da biste otvorili portala za pomoć u novom prozoru."
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="Instalacioni direktorij je već obrisan."
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="Instalacioni direktorij ne može biti obrisan. Molim, obrišite ga ručno."
+INSTL_COMPLETE_FOLDER_REMOVED="Instalacioni direktorij je uspešno obrisan"
+INSTL_COMPLETE_LANGUAGE_1="Joomla! na vašem jeziku?"
+INSTL_COMPLETE_LANGUAGE_2="Posjetite Joomla! portal za pomoć, više informacija ili preuzimanja."
+INSTL_COMPLETE_REMOVE_FOLDER="Obrišite instalacioni direktorij"
+INSTL_COMPLETE_REMOVE_INSTALLATION="UPOZORENJE!<br/>OBAVEZNO OBRISATI INSTALACIONI DIREKTORIJ<br />Nećete moći da radite dalje dok se ne ukloni instalacioni direktorij. Ovo je sigurnosna opcija Joomla! instalacije i ne može se drugačije onemogućiti."
+INSTL_COMPLETE_TITLE="Čestitam, vaša Joomla! je instalirana."
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="Nije moguće povezati se na bazu podataka. Povezivanje vraća broj: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Pojavila se greška prilikom kopiranja baze."
+INSTL_DATABASE_ERROR_CREATE="Pojavila se greška prilikom pravljenja baze %s.<br/> Korisnik možda nema dozvolu za kreiranje baze. Potrebna baza može biti instalirana odvojeno prije nego što nastavite sa instalacijom Joomle."
+INSTL_DATABASE_ERROR_DELETE="Pojavile su se neke greške prilikom brisanja baze."
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Obriši"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Rezervna kopija"
+INSTL_DATABASE_FIX_TOO_LONG="Prefiks MySQL tabele mora imati najviše 15 znakova"
+INSTL_DATABASE_INVALID_DB_DETAILS="Sadržaj baze je pogrešan i/ili prazan."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="Potreban je MySQL 5.0.4 ili više za nastavak instalacije. Vaša verzija je: %s"
+INSTL_DATABASE_INVALID_TYPE="Molim odaberite tip baze podataka"
+INSTL_DATABASE_NAME_TOO_LONG="Ime MySQL baze podataka mora imati najviše 64 znaka"
+INSTL_DATABASE_PREFIX_INVALID_CHARS="MySQL prefiks tabele mora početi slovom"
+INSTL_DATABASE_INVALID_NAME="MySQL verzija je pre 5.1.6 ne smije da sadrži tačke ili druge "_QQ_"special"_QQ_" karaktere u imenu. Vaša verzija je: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="MySQL ime baze i ime tabele ne može početi ili završiti se praznim mjestom."
+INSTL_DATABASE_NAME_INVALID_CHAR="MySQL identifier ne može da sadrži NUL ASCII(0x00)."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="Datoteka %s ne postoji"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="Kolačići nisu dozvoljeni u vašem pretraživaču. Nećete moći završiti instalaciju ukoliko je ta opcija isključena."
+INSTL_HEADER_ERROR="Greška"
+
+;Helpers
+INSTL_PAGE_TITLE="Joomla! Internet instalacija"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="Nije moguće povezati se na bazu podataka. Povezivanje vraća broj: %s"
+INSTL_STD_OFFLINE_MSG="Portal je trenutno u izradi .<br /> Molim vas pokušajte ponovo kasnije."
+
+;Filesystem model
+INSTL_FTP_INVALIDROOT="Naznačeni FTP direktorij nije direktorij Joomla! instalacije"
+INSTL_FTP_NOCONNECT="Nije moguće povezati se na FTP server"
+INSTL_FTP_NODELE="Funkcija '_QQ_'DELE'_QQ_' neuspješna."
+INSTL_FTP_NODIRECTORYLISTING="Nije moguće dobiti spisak direktorijuma sa FTP  servera"
+INSTL_FTP_NOLIST="Funkcija '_QQ_'LIST'_QQ_' neuspješna."
+INSTL_FTP_NOLOGIN="Nije moguća prijava na FTP server."
+INSTL_FTP_NOMKD="Funkcija '_QQ_'MKD'_QQ_' neuspješna."
+INSTL_FTP_NONLST="Funkcija '_QQ_'NLST'_QQ_' neuspješna."
+INSTL_FTP_NOPWD="Funkcija '_QQ_'PWD'_QQ_' neuspješna."
+INSTL_FTP_NORETR="Funkcija '_QQ_'RETR'_QQ_' neuspješna."
+INSTL_FTP_NORMD="Funkcija '_QQ_'RMD'_QQ_' neuspješna."
+INSTL_FTP_NOROOT="Nije moguće pristupiti traženom FTP direktoriju"
+INSTL_FTP_NOSTOR="Funkcija '_QQ_'STOR'_QQ_' neuspješna."
+INSTL_FTP_NOSYST="Funkcija '_QQ_'SYST'_QQ_' neuspješna."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Nemoguće automatsko prepoznavanje osnovnog direktorija FTP-a"
+
+;others
+INSTL_ADVANCED_SETTINGS="Napredno podešavanje"
+INSTL_BASIC_SETTINGS="Osnovno podešavanje"
+INSTL_CONFPROBLEM="Vaša datoteka sa podešavanjima ili direktorij nisu podešeni za upis, ili je došlo do problema u pravljenju datoteke sa podešavanjima. Treba da prepišete sljedeći kod ručno. Kliknite na prostor za tekst da obilježite cijeli tekst koda, zatim kopiraj i dodaj u novu datoteku sa imenom 'configuration.php' i iskopirajte datoteku u osnovni direktorij (emg. root) vašeg portal."
+INSTL_DISPLAY_ERRORS="Prikaz grešaka"
+INSTL_ERROR_DB="Postoje greške prilikom objavljivanja baze: %s"
+INSTL_FILE_UPLOADS="Podizanje datoteke"
+INSTL_GNU_GPL_LICENSE="GNU opšta javna licenca"
+INSTL_INSTALLATION="Instalacija"
+INSTL_LICENSE="Licenca"
+INSTL_JSON_SUPPORT_AVAILABLE="JSON podrška"
+INSTL_MAGIC_QUOTES_RUNTIME="Magic Quotes okruženje"
+INSTL_MB_LANGUAGE_IS_DEFAULT="MB jezik je podrazumjevan"
+INSTL_MB_STRING_OVERLOAD_OFF="MB String Overload isključen"
+INSTL_MYSQL_SUPPORT="MySQL podrška"
+INSTL_NOTICEMBLANGNOTDEFAULT="PHP mbstring jezik nije neutralan. Ovo možete namjestiti lokalno unošenjem <strong>php_value mbstring.language neutral</strong> u <code>.htaccess</code>."
+INSTL_NOTICEMBSTRINGOVERLOAD="PHP mbstring function overload je podešeno. Ovo može biti isključeno lokalno unošenjem <strong>php_value mbstring.func_overload 0</strong> u <code>.htaccess</code>."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />Još uvijek možete da nastavite instalaciju, konfiguraciona podešavanja će biti prikazana na kraju. Potrebno je da ručno iskopirate kod. Kliknite na teksta i obilježite oblast, a zatim to iskopirate u novu tekstualnu datoteku. Nazovite ga 'configuration.php' i kopirajte ga u osnovni direktorij portala (eng. root)."
+INSTL_OUTPUT_BUFFERING="Izlazna međumemorija"
+INSTL_PARSE_INI_FILE_AVAILABLE="INI Parser podrška"
+INSTL_PHP_VERSION="PHP verzija"
+INSTL_REGISTER_GLOBALS="Register Globals funkcija"
+INSTL_SAFE_MODE="Safe Mode funkcija"
+INSTL_SESSION_AUTO_START="Automatsko pokretanje sesija"
+INSTL_WRITABLE="Omogućeno pisanje"
+INSTL_XML_SUPPORT="XML podrška"
+INSTL_ZLIB_COMPRESSION_SUPPORT="Podrška za Zlib kompresiju"
+
+;Global strings
+JADMINISTRATOR="Administrator"
+JADVANCED="Napredno"
+JCHECK_AGAIN="Ponovna provjera"
+JERROR="Greška"
+JGLOBAL_ISFREESOFTWARE="%s je slobodan softver pod <a href="_QQ_"http://www.gnu.org/licenses/gpl-2.0.html"_QQ_">GNU General Public licencom</a>."
+JINVALID_TOKEN="Najnoviji zahtev je odbijen zato što sadrži pogrešan sigurnosni znak (token). Molimo vas da osvježite stranicu i pokušate ponovo."
+JNEXT="Dalje"
+JNO="Ne"
+JOFF="Isključeno"
+JON="Uključeno"
+JPREVIOUS="Prethodno"
+JSITE="Portal"
+JUSERNAME="Korisničko ime"
+JYES="Da"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Nije moguće učitati drajver baze: %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="Vaša sesija je istekla, molim ponovo učitajte stranicu."
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Obavezno: %s"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Pogrešno: %s"
+
+;Necessary for errors
+ADMIN_EMAIL="Vaš email"
+ADMIN_PASSWORD="Administratorska šifra"
+ADMIN_PASSWORD2="Potvrda administratorske šifre"
+SITE_NAME="Ime portala"
