@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
+<metafile
+	version="1.6"
+	client="installation">
+	<name>Bosanski (BA)</name>
+	<version>1.6.1</version>
+	<creationDate>2011-04-01</creationDate>
+	<author>www.joomla.ba</author>
+ 	<copyright>Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<description></description>
+	<files>
+		<filename>bs-BA.ini</filename>
+	</files>
+	<metadata>
+		<name>Bosanski (Bosnia)</name>
+		<tag>bs-BA</tag>
+		<rtl>0</rtl>
+	</metadata>
+	<params />
+</metafile>
